--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 
 spring.banner.image.location=Doc.jpg
 spring.messages.basename=messages/messages
+spring.devtools.livereload.enabled=true
+server.error.whitelabel.enabled=false
+
