Update Profiles to use Spring Data JPA Services Closes #62

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.banner.image.location=Doc.jpg
 spring.messages.basename=messages/messages
 spring.devtools.livereload.enabled=true
 server.error.whitelabel.enabled=false
-
+#spring.profiles.active=springdatajpa;
