Its already JUnit#5 however added @ExtendWith A couple of lines in pom added following JT instruction but later realized it was not required since its already using JUnit5. Closes #4

--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -40,6 +40,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter-api</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter-engine</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
     </dependencies>
 <properties>
     <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
@@ -51,6 +61,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
 
             </plugin>
+
         </plugins>
     </build>
 
