--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -54,7 +54,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter-api</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter-engine</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
         <!-- webjars -->
         <dependency>
