Error on Display Owner fixed Closes #63

--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -50,6 +50,13 @@
 <!--            <artifactId>junit-jupiter-engine</artifactId>-->
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 <properties>
     <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
