Implemented Find Owner and Display Owner Closes #57 Closes #58

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.banner.image.location=Doc.jpg
 spring.messages.basename=messages/messages
 spring.devtools.livereload.enabled=true
 server.error.whitelabel.enabled=false
-#spring.profiles.active=springdatajpa;
+spring.profiles.active=springdatajpa
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
