--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>bootstrap</artifactId>
             <version>${webjars-bootstrap.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
         <!-- end of webjars -->
 
     </dependencies>
